fix(cutouts) fix overflow

--- a/css/main.220c.css
+++ b/css/main.220c.css
@@ -57,7 +57,7 @@ body {
   content: "";
   width: 0;
   height: 0;
-  border-left: 480px solid #fff;
+  border-left: 466px solid #fff;
   border-top: 80px solid transparent;
   font-size: 0;
   line-height: 0;
@@ -135,7 +135,7 @@ body {
   content: "";
   width: 0;
   height: 0;
-  border-right: 480px solid #fff;
+  border-right: 466px solid #fff;
   border-bottom: 80px solid transparent;
   font-size: 0;
   line-height: 0;
@@ -160,7 +160,7 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.3'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 480) {
   .masthead::after {
     border-left-width: 100vw;
   }
